syntax = "proto3";

package com.gencent.pojo;

option java_multiple_files = false;
option java_outer_classname = "MessageProto";

enum HeadType
{
  LOGIN_REQUEST = 0;
  LOGIN_RESPONSE = 1;
  LOGOUT_REQUEST = 2;
  LOGOUT_RESPONSE = 3;
  HEARTBEAT_REQUEST = 4;
  HEARTBEAT_RESPONSE = 5;
  MESSAGE_REQUEST = 6;
  MESSAGE_RESPONSE = 7;
  MESSAGE_NOTIFICATION = 8;
}


message LoginRequest{
  string uid = 1;
  string token = 3;
}

message LoginResponse{
  bool  result = 1;
  uint32 code = 2;
  string info = 3;
  uint32 expose = 4;
}

message MessageRequest{
  uint64 msg_id = 1;
  string from = 2;
  string to = 3;
  uint64 time = 4;
  uint32 msg_type = 5;
  string content = 6;
  optional string url = 8;
  optional string property = 9;
  optional string from_nick = 10;
  optional string json = 11;
}

message MessageHeartBeat {
  uint32   seq = 1;
  string   uid = 2;
}


message MessageResponse
{
  bool result = 1;
  uint32 code = 2;
  string info = 3;
  uint32 expose = 4;
  bool last_block = 5;
  fixed32 block_index = 6;
}


message MessageNotification
{
  uint32 msg_type = 1;
  bytes  sender = 2;
  string json = 3;
  string timestamp = 4;
}


message Message
{
  HeadType type = 1;
  uint64  sequence = 2;
  string  session_id = 3;
  optional LoginRequest loginRequest = 4;
  optional LoginResponse loginResponse = 5;
  optional MessageRequest messageRequest = 6;
  optional MessageResponse messageResponse = 7;
  optional MessageNotification notification = 8;
  optional MessageHeartBeat heartBeat = 9;  //心跳
}